--- a/public/package.json
+++ b/public/package.json
@@ -17,11 +17,17 @@
   },
   "homepage": "https://github.com/cntoplolicon/infection#readme",
   "devDependencies": {
+    "css-loader": "^0.20.2",
+    "extract-text-webpack-plugin": "^0.8.2",
+    "file-loader": "^0.8.4",
     "jsx-loader": "^0.13.2",
+    "style-loader": "^0.13.0",
+    "url-loader": "^0.5.6",
     "webpack": "^1.12.2",
     "webpack-dev-server": "^1.12.1"
   },
   "dependencies": {
+    "bootstrap": "^3.3.5",
     "history": "^1.12.5",
     "jquery": "^2.1.4",
     "moment": "^2.10.6",
