--- a/public/package.json
+++ b/public/package.json
@@ -4,7 +4,8 @@
   "description": "plus one app rest service",
   "main": "app.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "NODE_ENV=production webpack -p"
   },
   "repository": {
     "type": "git",
