--- a/config/database.yml
+++ b/config/database.yml
@@ -14,6 +14,10 @@ development:
   <<: *default
   host: 192.168.1.122
 
+staging:
+  <<: *default
+  host: 192.168.1.122
+
 production:
   <<: *default
   host: 192.168.1.122
