--- a/public/package.json
+++ b/public/package.json
@@ -24,8 +24,7 @@
     "jsx-loader": "^0.13.2",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
-    "webpack": "^1.12.2",
-    "webpack-dev-server": "^1.12.1"
+    "webpack": "^1.12.2"
   },
   "dependencies": {
     "bootstrap": "^3.3.5",
