--- a/public/package.json
+++ b/public/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "deploy": "NODE_ENV=production webpack -p"
+    "deploy": "webpack -p --config webpack.production.config.js"
   },
   "repository": {
     "type": "git",
