--- a/public/package.json
+++ b/public/package.json
@@ -24,6 +24,7 @@
     "jsx-loader": "^0.13.2",
     "less": "^2.5.3",
     "less-loader": "^2.2.1",
+    "object-assign": "^4.0.1",
     "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
     "webpack": "^1.12.2"
