--- a/config.yml
+++ b/config.yml
@@ -11,7 +11,7 @@ aws:
   secret_access_key: '4p182v6XYs85g/0WWBMl+mvk/nseEkQoPrt//xBE'
 
 s3:
-  bucket: 'plus1'
+  bucket: 'image.oneplusapp.com'
   host: 'http://image.oneplusapp.com/'
 
 yunba:
