upload apk from admin dashboard

--- a/config.yml
+++ b/config.yml
@@ -12,9 +12,11 @@ aws:
 
 s3:
   bucket: 'image.oneplusapp.com'
+  storage_bucket: 'download.oneplusapp.com'
 
 cdn:
   hosts: ['http://image.oneplusapp.com/']
+  storage_host: 'http://download.oneplusapp.com/'
 
 yunba:
   app_key: '561b7f3d860409b810e0d11a'
