--- a/config.yml
+++ b/config.yml
@@ -11,12 +11,26 @@ aws:
   secret_access_key: '4p182v6XYs85g/0WWBMl+mvk/nseEkQoPrt//xBE'
 
 s3:
-  bucket: 'image.oneplusapp.com'
-  storage_bucket: 'download.oneplusapp.com'
+  development:
+    bucket: 'image-dev.oneplusapp.com'
+    storage_bucket: 'download.oneplusapp.com'
+  staging:
+    bucket: 'image-dev.oneplusapp.com'
+    storage_bucket: 'download.oneplusapp.com'
+  production:
+    bucket: 'image.oneplusapp.com'
+    storage_bucket: 'download.oneplusapp.com'
 
 cdn:
-  hosts: ['http://image.oneplusapp.com/']
-  storage_host: 'http://download.oneplusapp.com/'
+  development:
+    hosts: ['http://image-dev.oneplusapp.com/']
+    storage_host: 'http://download.oneplusapp.com/'
+  staging:
+    hosts: ['http://image-dev.oneplusapp.com/']
+    storage_host: 'http://download.oneplusapp.com/'
+  production:
+    hosts: ['http://image.oneplusapp.com/']
+    storage_host: 'http://download.oneplusapp.com/'
 
 yunba:
   app_key: '561b7f3d860409b810e0d11a'
